# XlsxWriter

./: .gitignore  .pylintrc  .readthedocs.yaml  .travis.yml  .typos.toml  CONTRIBUTING.md  Changes  ISSUE_TEMPLATE.md  LICENSE.txt  MANIFEST.in  Makefile  PULL_REQUEST_TEMPLATE.md  README.rst  README.txt  chart_doughnut.xlsx  chart_pie.xlsx  conditional_format.xlsx  conftest.py  pyproject.toml  run_tests.py  setup.cfg  setup.py  terserah  tox.ini
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
dev/: Readme.txt
docs/: Readme.txt  readme.html
examples/: .pylintrc  array_formula.py  autofilter.py  autofilter_data.txt  autofit.py  autofit_manually.py  autofit_number_format.py  background.py  cell_indentation.py  chart.py  chart_area.py  chart_bar.py  chart_clustered.py  chart_column.py  chart_combined.py  chart_data_labels.py  chart_data_table.py  chart_data_tools.py  chart_date_axis.py  chart_doughnut.py  chart_gauge.py  chart_gradient.py  chart_line.py  chart_pareto.py  chart_pattern.py  chart_pie.py  chart_pie_data_labels_shapes.py  chart_radar.py  chart_scatter.py  chart_secondary_axis.py  chart_stock.py  chart_styles.py  chart_subtitle.py  chart_textbox.py  chartsheet.py  check_close.py  checkbox.py  colors.py  comments1.py  comments2.py  (+84 more)
xlsxwriter/: __init__.py  app.py  chart.py  chart_area.py  chart_bar.py  chart_column.py  chart_doughnut.py  chart_drawing.py  chart_line.py  chart_pie.py  chart_radar.py  chart_scatter.py  chart_stock.py  chart_title.py  chartsheet.py  color.py  comments.py  core.py  (+31 more)
xlsxwriter.egg-info/: PKG-INFO  SOURCES.txt
(+2641 files in other folders)
